--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,11 @@ deps = -r{toxinidir}/requirements-testing.txt
 [testenv:coveralls]
 deps =
     coveralls
+    -e.
     -r{toxinidir}/requirements-testing.txt
 commands =
-    py.test --cov=pytest_factoryboy --cov-report=term-missing tests
+    coverage run --source=pytest_factoryboy {envdir}/bin/py.test tests
+    coverage report -m
     coveralls
 
 [pytest]
