--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
     coverage run --source=pytest_factoryboy {envdir}/bin/py.test tests
     coverage report -m
     coveralls
-passenv = COVERALLS_REPO_TOKEN
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 
 [pytest]
 addopts = -vv -l --pep8
